--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p><a href=''>Download Excursion (Coming soon!)</a></p>
   </header>
   <main>
-    <video autoplay loop>
+    <video autoplay loop muted>
       <source src="./resources/videos/excursion.mp4" type="video/mp4">
       Your browser does not support the video tag
     </video> 
